--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run tailwind:css && react-scripts start",
+    "build": "npm run tailwind:css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "tailwind:css": "tailwind build src/tailwind.css -c tailwind.config.js -o src/index.css"
   },
   "husky": {
     "hooks": {
@@ -26,8 +27,8 @@
   },
   "lint-staged": {
     "./src/*.{js,jsx,ts,tsx}": [
-      "npx prettier --write --fix",
-      "eslint src/*.js --cache --fix-dry-run"
+      "npx prettier --write",
+      "eslint src/*.{js,jsx,ts,tsx} --cache --fix-dry-run"
     ]
   },
   "eslintConfig": {
@@ -52,8 +53,11 @@
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "tailwindcss": "^1.4.6"
   }
 }
