--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
-		"forceConsistentCasingInFileNames": true,
+		"forceConsistentCasingInFileNames": false,
 		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
@@ -17,5 +17,5 @@
 		"jsx": "preserve",
 		"rootDirs": ["src", "stories"]
 	},
-	"include": ["src"]
+	"include": ["src/**/*.ts", "src/**/*.tsx"]
 }
